--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/fireworks-designer/firework-favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fireworks Designer</title>
     <script
       type="module"
       crossorigin
